src/pages/DeveloperDetails2/DeveloperDetails2.css
.developerDetails2-container {
  width: 80vw;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  border: 0px solid red;
}

.developerDetails2-image-and-info-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  font-size: 18px;
  border: 0px solid red;
}

.developerDetails2-image-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

/* .developerDetails2-info-city-salary-jobtype-expYears { */
.developerDetails2-info-city-email-following-followers {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  border: 0px solid red;
  background-color: #fcfcfc;
  padding: 0;
}

.developerDetails2-image {
  width: 200px;
  height: 200px;
  object-fit: cover;
  border-radius: 50%;
}

/* .developerDetails2-title-and-state { */
.developerDetails2-name-surname-and-developerType {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1rem;
}

/* .developerDetails2-title { */
.developerDetails2-name-surname {
  font-size: 30px;
  font-weight: 900;
}

.developerDetails2-offerState {
  font-size: 20px;
  font-weight: bold;
}

.developerDetails2-read-ratings {
  /* border: 1px solid red; */
  margin-bottom: 1rem;
}

.developerDetails2-info {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.developerDetails2-info-city,
.developerDetails2-info-email,
.developerDetails2-info-following,
.developerDetails2-info-followers {
  width: 250px;
  height: 110px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 36px;
  border: 0.7px solid #e3e4e5;
  border-radius: 5px;
  padding: 0 0 0 12px;
}

.developerDetails2-info-city:hover,
.developerDetails2-info-email:hover,
.developerDetails2-info-following:hover,
.developerDetails2-info-followers:hover {
  background-color: #25d366;
  color: #e3e4e5;
  font-weight: 700;
}

.developerDetails2-info-developer-detail {
  font-weight: 900;

  /* limit the number of characters to show just 22 */
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 22ch;
}

/* .developerDetails2-offer-rating-writeRating-container { */
.developerDetails2-developer-rating-writeRating-container {
  width: 80%;
  height: 50px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  border: 0.7px solid #e3e4e5;
  border-radius: 9px;
  background-color: #fcfcfc;
  margin-top: 1rem;
}

/* .developerDetails2-city-jobType-technologies { */
.developerDetails2-city-languages-technologies {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  border: 0px solid black;
  padding: 1rem;
}

/* .developerDetails2-city-jobType { */
.developerDetails2-city-languages {
  width: 450px;
  height: 400px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 1rem;
  border: 0.7px solid #e3e4e5;
  border-radius: 9px;
  background-color: #fcfcfc;
  padding: 0 0 0 23px;
  padding-top: 20px;
}

.developerDetails2-technologies {
  width: 763px;
  height: 400px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 1rem;
  border: 0.7px solid #e3e4e5;
  border-radius: 9px;
  background-color: #fcfcfc;
  padding: 0 0 0 23px;
  padding-top: 20px;
}

.developerDetails2-city-jobType>h3 {
  font-weight: 900;
  font-size: 25px;
}

.developerDetails2-technologies>h3 {
  font-weight: 900;
  font-size: 25px;
}

.developerDetails2-info-technologies {
  border: 0px solid red;
  margin-top: 20px;
}

.developerDetails2-info-technology {
  margin: 20px 0 0 25px;
  min-height: 150px;
  border: 0px solid red;
}

.developerDetails2-info-technologies>h5 {
  font-weight: 900;
  font-size: 18px;
}

.developerDetails2-icons-technologies-container {
  min-height: 100%;
  min-width: 90%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  /* border: 0px solid #e3e4e5; */
  border: 0px solid red;
  gap: 2rem;
  margin-bottom: 1rem;
}

.developerDetails2-city-localization,
.developerDetails2-jobType {
  display: flex;
  flex-direction: column;
  margin-top: 63px;
  border: 0 solid red;
  font-size: 21px;
}

/* .developerDetails2-info-city-jobType { */
.developerDetails2-info-city-languages {
  font-size: 16px;
  padding-left: 23px;
  border: 0 solid red;
}

/* .developerDetails2-jobType { */
.developerDetails2-languages {
  margin-top: 52px;
}

.developerDetails2-comments-container {
  width: 80%;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  border: 0.7px solid #e3e4e5;
  border-radius: 9px;
  background-color: #fcfcfc;
  padding: 0rem;
}

.developerDetails2-offer-rating-container {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  border: 0.7px solid #e3e4e5;
  border-radius: 9px;
  background-color: #fcfcfc;
  gap: 1rem;
  padding: 1rem;
}

.developerDetails2-tech-image {
  max-width: 57px;
  min-width: 57px;
  max-height: 57px;
  min-height: 57px;
  object-fit: cover;
  padding: 0.1px;
  margin: 0;
}

.developerDetails2-icon-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.developerDetails2-horizontal-line {
  height: 2px;
  width: 80%;
  border: 0.7px solid #e3e4e5;
  border-radius: 9px;
  background-color: #fcfcfc;
  margin: 1rem;
}

.developerDetails2-developer-description {
  text-align: justify;
  max-width: 1236px;
  min-width: 80%;
  border: 0.7px solid #e3e4e5;
  border-radius: 9px;
  background-color: #fcfcfc;
  padding: 1.7rem;
}

.developerDetails2-private-comments-container {
  width: 80%;
  border: 1px solid #e3e4e5;
  border-radius: 9px;
  background-color: #fcfcfc;
  /* border: 0px solid red; */
  /* margin: 0rem 0 1.7rem 0; */
  margin-bottom: 1rem;
}

.developerDetails2-public-comments-container {
  width: 80%;
  border: 1px solid #e3e4e5;
  border-radius: 9px;
  background-color: #fcfcfc;
  /* border: 0px solid red; */
  /* margin: 0rem 0 1.7rem 0; */
  margin-bottom: 2rem;
}

.developerDetails2-experiences-container {
  max-height: 400px;
  overflow-y: auto;
  width: 80%;
  border: 1px solid #e3e4e5;
  border-radius: 9px;
  background-color: #fcfcfc;
  /* border: 1px solid red; */
  margin-top: 0.7rem;
  padding: 1.7rem;
}

.developerDetails2-single-experience-container {
  border: 2px solid #e3e4e5;
  border-radius: 9px;
  background-color: #fcfcfc;
  padding: 1.5rem;
  margin-top: 1rem;
  /* border: 1px solid red; */
}

.developerDetails2-private-comment-btn {
  border: none;
  border-radius: 30px;
  height: 39px;
  width: 270px;
  background-color: #25d366;
  color: white;
  font-size: 16px;
  transition: linear 0.2s;
  margin-top: 10px;
}

.developerDetails2-private-comment-btn:hover {
  border: 1.5px solid #25d366;
  background-color: rgb(250, 250, 250);
  color: #25d366;
  font-size: 18px;
  cursor: pointer;
}

@media (max-width: 600px) {
  .developerDetails2-image-and-info-container {
    flex-direction: column;
    gap: 2rem;
  }

  .developerDetails2-private-comment-btn {
    width: 120px;
  }

  .developerDetails2-info-city,
  .developerDetails2-info-email,
  .developerDetails2-info-following,
  .developerDetails2-info-followers {
    gap: 1rem;
    width: 100%;
    align-items: center;
  }

  /* .developerDetails2-offer-rating-writeRating-container { */
  .developerDetails2-developer-rating-writeRating-container {
    width: 100%;
  }

  .developerDetails2-city-languages {
    display: none;
  }

  .developerDetails2-technologies {
    width: 316px;
    height: 100%;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 0px solid red;
  }

  .developerDetails2-icons-technologies-container {
    max-height: 800px;
    margin: 0 0 0 0;
    gap: 12px;
    /* overflow-y: scroll; */
  }

  .developerDetails2-city-languages-technologies {
    padding: 0;
  }

  .developerDetails2-technologies>h3 {
    font-size: 20px;
    margin-top: 12px;
  }

  .developerDetails2-info-technologies>h5 {
    text-align: center;
  }

  .developerDetails2-horizontal-line {
    width: 100%;
  }

  .developerDetails2-developer-description {
    height: 100%;
  }

  .developerDetails2-comments-container {
    width: 100%;
  }

  .developerDetails2-single-experience-container>h3 {
    font-size: 18px;
    font-weight: 900;
  }
}

